--- a/app/views/piings/_form.html.erb
+++ b/app/views/piings/_form.html.erb
@@ -1,4 +1,24 @@
 <% form_for @piing, :html => { :multipart => true } do |form| %>
-  <%= form.file_field :torrent %>
+  
   <%= submit_tag "Submit" -%>
+
+  <%= form.file_field :torrent, :id => 'select_torrent' %>
+
+  <script type="text/javascript">
+    $(document).ready(function() {
+      $('#select_torrent').fileUpload ({
+        'uploader'  : '/flash/uploader.swf',
+        'script'    : '/piings',
+        'cancelImg' : '/images/cancel.png',
+        'auto'      : false,
+        'width'     : 498,
+        'height'    : 158,
+        'buttonImg' : '/images/select_button.png',
+        'folder'    : '/uploads',
+        'file_queued_handler' : function() { console.log('hi'); }
+    });
+    });
+</script>
+
+  <!--<%= submit_tag "Submit" -%> -->
 <% end %>
