--- a/app/views/piings/index.html.erb
+++ b/app/views/piings/index.html.erb
@@ -1,3 +1,12 @@
+<div id="intro">
+  <h2>Hid.im embeds torrents in images</h2>
+  <p>
+    Hid.im takes a regular torrent file and embeds it in the image, encoding the binary data into each pixel color.  It produces
+    a PNG image that can be saved and posted anywhere that images can be posted.  It can even be pasted into another
+    image such as a personal signature image as long as the file is saved losslessly and no colors are changed.
+  </p>
+</div>
+
 <div id="create">
   <h2>Make:</h2>
   <%= render :partial => 'form' -%>
