--- a/app/views/piings/show.html.erb
+++ b/app/views/piings/show.html.erb
@@ -1,1 +1,5 @@
-<%= image_tag @piing.png.url -%>
+<%= image_tag @piing.png.url, :class => 'hidim' -%>
+
+<script type="text/javascript">
+  var img = $('img.hidim');
+</script>
