Only show featured piings

--- a/app/views/piings/index.html.erb
+++ b/app/views/piings/index.html.erb
@@ -7,7 +7,10 @@
   <h2>Sample hidim'd torrents</h2>
   <ul>
     <% @piings.each do |piing| -%>
-      <li><%= image_tag piing.png.url -%></li>
+      <li>
+        <%= image_tag piing.png.url -%>
+        <div><%= piing.torrent_file_name -%></div>
+      </li>
     <% end -%>
   </ul>
 </div>
