--- a/app/views/piings/show.html.erb
+++ b/app/views/piings/show.html.erb
@@ -1,3 +1,7 @@
+<h2>Here's your hid.im!</h2>
+
 <%= image_tag @piing.png.url, :class => 'hidim' -%>
 
-<canvas></canvas>
+<p>Right-click it, <i>Save As</i> to save your hidim to your computer.  <b>This image was dynamically generated and will be removed soon, so please don't link to it here.</b></p>
+
+<!--<script type="text/javascript" src="/javascripts/read_png.js"></script> -->
