--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -2,6 +2,8 @@ body {
   background: #333 url('../images/repeat.png') top left repeat-y;
   margin: 0;
   color: #FFF;
+  font-family: Helvetica, sans-serif;
+  color: #ddd;
 }
 #recent ul li {
   list-style: none;
@@ -17,7 +19,23 @@ h1 {
   text-indent: -10000px;
   background: url('../images/background.png') top left no-repeat;
   margin: 0 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+ul li div {
+  font-size: 0.8em;
+  margin-bottom: 1em;
 }
 #content {
   margin-left: 250px;
+}
+h2 {
+  color: #AAA;
+  font-weight: bold;
+  font-size: 1.1em;
+  text-shadow: #222 0 1px 0;
+}
+p {
+  font-size: 0.9em;
 }
