--- a/app/views/hidims/index.html.erb
+++ b/app/views/hidims/index.html.erb
@@ -15,8 +15,8 @@
 <div id="recent">
   <h2>Sample hidim'd torrents</h2>
   <ul>
-    <% @piings.each do |piing| -%>
-      <li><%= image_tag piing.png.url -%></li>
+    <% @hidims.each do |hidim| -%>
+      <li><%= image_tag hidim.png.url -%></li>
     <% end -%>
   </ul>
 </div>
