--- a/app/views/hidims/show.html.erb
+++ b/app/views/hidims/show.html.erb
@@ -1,4 +1,4 @@
-<%= image_tag @piing.png.url, :class => 'hidim' -%>
+<%= image_tag @hidim.png.url, :class => 'hidim' -%>
 
 <script type="text/javascript">
   var img = $('img.hidim');
