--- a/app/views/hidims/show.html.erb
+++ b/app/views/hidims/show.html.erb
@@ -1,6 +1,6 @@
 <h2>Here's your hid.im!</h2>
 
-<%= image_tag @piing.png.url, :class => 'hidim' -%>
+<%= image_tag @hidim.png.url, :class => 'hidim' -%>
 
 <p>Right-click it, <i>Save As</i> to save your hidim to your computer.  <b>This image was dynamically generated and will be removed soon, so please don't link to it here.</b></p>
 
