--- a/app/views/hidims/show.html.erb
+++ b/app/views/hidims/show.html.erb
@@ -1,7 +1,9 @@
-<h2>Here's your hid.im!</h2>
+<h2 class="first">Here's your hid.im!</h2>
 
-<%= image_tag @hidim.png.url, :class => 'hidim' -%>
+<div class="hidim-item">
+  <%= render :partial => 'hidim', :object => @hidim -%>
+</div>
 
 <p>Right-click it, <i>Save As</i> to save your hidim to your computer.  <b>This image was dynamically generated and will be removed soon, so please don't link to it here.</b></p>
 
-<!--<script type="text/javascript" src="/javascripts/read_png.js"></script> -->
+<p><a href="/">Back to the site</a></p>
