--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <meta name="description" content="Encode your torrents to images"/>
 
-  <%= stylesheet_link_tag "application" -%>
+  <%= stylesheet_link_tag "jquery.lightbox", "application" -%>
 
   <!--[if IE 6]>
     <%= stylesheet_link_tag 'base_ie6', 'application_ie6' -%>
@@ -16,7 +16,7 @@
     <%= stylesheet_link_tag 'base_ie7', 'application_ie7' -%>
   <![endif]-->
 
-  <%= javascript_include_tag 'jquery', 'sha1', 'read_png',
+  <%= javascript_include_tag 'jquery', 'jquery.lightbox', 'sha1', 'read_png',
                              :cache => 'jquery-all' -%>
 </head>
 
@@ -25,20 +25,19 @@
   <h1>hid.im</h1>
 
   <div id="content">
-  
-    <% unless flash[:notice].blank? -%>
-      <div id="notice">
-	<% if Array === flash[:notice] -%>
-          <%= flash[:notice].map{|line| "<p>#{line}</p>"} -%>
-	<% else -%>
-          <%= flash[:notice] -%>
-	<% end -%>
-      </div>
-    <% end -%>
     
     <%= yield %>
 
-    </div>
+    <div class="push"></div>
+
+  </div>
+  <div id="footer">
+    <p>
+      Hid.im is a <a href="http://nuttnet.net">mnutt</a> and <a href="http://zootella.com">zootella</a> production.
+    </p>
+  </div>
+
+<%= render :partial => 'tracker' -%>
 
 </body>
 </html>
