--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,7 @@
     <%= stylesheet_link_tag 'base_ie7', 'application_ie7' -%>
   <![endif]-->
 
-  <%= javascript_include_tag 'jquery', 'jquery.lightbox', 'sha1', 'read_png',
-                             :cache => 'jquery-all' -%>
+  <%= javascript_include_tag 'jquery', 'jquery.lightbox' -%>
 </head>
 
 <body>
