--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <%= stylesheet_link_tag 'base_ie7', 'application_ie7' -%>
   <![endif]-->
 
-  <%= javascript_include_tag 'jquery', 'jquery.lightbox' -%>
+  <%= javascript_include_tag 'jquery-1.3.2.min', 'jquery.lightbox.min' -%>
 </head>
 
 <body>
