--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,8 @@
   </title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <meta name="description" content="Encode your torrents to images"/>
+ 
+  <link rel="icon" type="image/png" href="/images/icon-16.png">
 
   <%= stylesheet_link_tag "jquery.lightbox", "application" -%>
 
