--- a/app/views/hidims/index.html.erb
+++ b/app/views/hidims/index.html.erb
@@ -28,7 +28,7 @@
     </p>
     <p>
       An experimental bookmarklet:
-      <a href="javascript:(function(){if(typeof%20HidimReader!='undefined'){HidimReader.init();}else{var%20n=document.createElement('script');n.setAttribute('language','JavaScript');n.setAttribute('src','http://localhost:3000/javascripts/hidim_reader.js');document.body.appendChild(n);}})();;">Decode Hidim</a><br/>
+      <a href="javascript:(function(){if(typeof%20HidimReader!='undefined'){HidimReader.init();}else{var%20n=document.createElement('script');n.setAttribute('language','JavaScript');n.setAttribute('src','http://hid.im/javascripts/hidim_reader.js');document.body.appendChild(n);}})();;">Decode Hidim</a><br/>
       (requires FF3, Safari4, Chrome)
     </p>
   </div>
