--- a/app/views/hidims/index.html.erb
+++ b/app/views/hidims/index.html.erb
@@ -29,7 +29,7 @@
     <p>
       An experimental bookmarklet:
       <a href="javascript:(function(){if(typeof%20HidimReader!='undefined'){HidimReader.init();}else{var%20n=document.createElement('script');n.setAttribute('language','JavaScript');n.setAttribute('src','http://hid.im/javascripts/hidim_reader.js');document.body.appendChild(n);}})();;">Decode Hidim</a><br/>
-      (requires FF3 or Safari4)
+      (requires Firefox 3 or Safari 4)
     </p>
   </div>
 </div>
