Change website copy, styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,7 @@
   <div id="footer">
     <p>
       Hid.im is a <a href="http://nuttnet.net">mnutt</a> and <a href="http://zootella.com">zootella</a> production.
+      &nbsp; Feedback: <a href="mailto:feedback@hid.im">feedback@hid.im</a>
     </p>
   </div>
 
