--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 
   <link rel="icon" type="image/png" href="/images/icon-16.png">
 
-  <%= stylesheet_link_tag "jquery.lightbox", "application" -%>
+  <%= stylesheet_link_tag "jquery.lightbox", "application", "syntax" -%>
 
   <!--[if IE 6]>
     <%= stylesheet_link_tag 'base_ie6', 'application_ie6' -%>
@@ -18,7 +18,7 @@
     <%= stylesheet_link_tag 'base_ie7', 'application_ie7' -%>
   <![endif]-->
 
-  <%= javascript_include_tag 'jquery-1.3.2.min', 'jquery.lightbox.min' -%>
+  <%= javascript_include_tag 'jquery-1.3.2.min', 'jquery.lightbox.min', 'syntax/sh_main.min', 'syntax/sh_javascript.min' -%>
 </head>
 
 <body>
@@ -39,7 +39,7 @@
     </p>
   </div>
 
-<%= render :partial => 'tracker' -%>
+<%= render :partial => 'hidims/tracker' -%>
 
 </body>
 </html>
