--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -41,7 +41,7 @@ h1 {
   margin: 0 20px -60px 260px;
 }
 
-h2.first {
+h2.first, h3.first {
   padding-top: 2em;
 }
 
@@ -59,6 +59,7 @@ h2 {
 p {
   font-size: 0.9em;
   line-height: 1.3em;
+  margin-bottom: 1em;
 }
 #create_wrapper, #extension_wrapper {
   width: 50%;
@@ -172,13 +173,17 @@ p {
   line-height: 1.6em;
 }
 
+#about_nav {
+  margin: 1em 0;
+}
+
 img.icon {
   border: 0;
   margin: 0 -1px -3px 0;
 }
 
 p {
-  margin-bottom: 0.4em;
+  margin-bottom: 1.1em;
 }
 
 a {
@@ -217,4 +222,13 @@ a.bookmarklet {
 img { behavior: url(/iepngfix.htc) }
 a img {
   border: 0;
+}
+
+ul, ol {
+  margin-bottom: 1em;
+}
+
+h3 {
+  border-bottom: 1px solid #DDD;
+  margin-bottom: 1em;
 }
