hidim show copy tweaking

--- a/app/views/hidims/show.html.erb
+++ b/app/views/hidims/show.html.erb
@@ -4,6 +4,7 @@
   <%= render :partial => 'hidim', :object => @hidim -%>
 </div>
 
-<p>Right-click it, <i>Save As</i> to save your hidim to your computer.  <b>This image was dynamically generated and will be removed soon, so please don't link to it here.</b></p>
+<p>Right-click it, <i>Save As</i> to save your hidim to your computer.<br>
+<b>This image was dynamically generated and will be removed soon, so please don't link to it here.</b></p>
 
 <p><a href="/">Back to the site</a></p>
