Add link to github

--- a/app/views/about/bookmarklet.html.erb
+++ b/app/views/about/bookmarklet.html.erb
@@ -121,6 +121,10 @@ hidims in exactly the same manner, but presents a much nicer "Save Torrent As...
 to the user.
 </p>
 
+<p>The full source is <a href="http://github.com/mnutt/hid.im/tree/master/public/javascripts">available on
+github</a>.
+</p>
+
 <script type="text/javascript">
   sh_highlightDocument();
 </script>
