Add twitter link

--- a/app/views/hidims/index.html.erb
+++ b/app/views/hidims/index.html.erb
@@ -2,6 +2,8 @@
   <h2 class="first">A Hidim turns a torrent into a regular PNG image</h2>
 
   <p>You save the png yourself. You can post it anywhere. People can decode it, but it can't be searched for... it won't turn up in searches for those torrents, unless you provide text that matches.</p>
+
+  <p>Follow us on twitter: <a href="http://twitter.com/michaeln3">@michaeln3</a> and <a href="http://twitter.com/zootella">@zootella</a></p>
 </div>
 
 <div id="create_wrapper">
